--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D91-P5-lgq">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1219"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1126"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Buckwheat" translatesAutoresizingMaskIntoConstraints="NO" id="Pnq-vd-eSH" userLabel="grainMainImage">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="406"/>
@@ -197,14 +197,14 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zxg-6q-PF7" userLabel="Description viewOutlet">
-                                                <rect key="frame" x="19" y="637" width="376" height="527"/>
+                                                <rect key="frame" x="19" y="637" width="376" height="434"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jT3-Ls-QvX">
-                                                        <rect key="frame" x="25" y="203.33333333333337" width="326" height="225.66666666666663"/>
+                                                        <rect key="frame" x="25" y="203.33333333333337" width="326" height="200.66666666666663"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="750" constant="50" id="SZm-ox-yB8"/>
                                                         </constraints>
-                                                        <string key="text">Однажды менеджеры Лайв Тайпинг подумали: «Как хорошо было бы иметь инструкцию-чеклист, чтобы ничего не забыть перед публикацией приложения в стор. С ней можно перестать носить всё в голове и не объяснять вновь пришедшим менеджерам, что к чему, а </string>
+                                                        <string key="text">Однажды менеджеры Лайв Тайпинг подумали: «Как хорошо было бы иметь инструкцию-чеклист, чтобы ничего не забыть перед публикацией приложения в стор. С ней можно перестать носить всё в голове и нпомогает нам. </string>
                                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
@@ -250,6 +250,7 @@
                                                     <constraint firstItem="jT3-Ls-QvX" firstAttribute="top" secondItem="b6b-z4-jcg" secondAttribute="bottom" constant="35" id="3Gs-lG-S1U"/>
                                                     <constraint firstItem="8aP-rJ-2KR" firstAttribute="centerY" secondItem="b6b-z4-jcg" secondAttribute="centerY" id="4Wn-Lq-usX"/>
                                                     <constraint firstItem="25P-jK-g2n" firstAttribute="leading" secondItem="zxg-6q-PF7" secondAttribute="leading" id="5O1-UC-sC1"/>
+                                                    <constraint firstAttribute="bottom" secondItem="jT3-Ls-QvX" secondAttribute="bottom" constant="30" id="5tx-MA-7Lg"/>
                                                     <constraint firstAttribute="trailing" secondItem="jT3-Ls-QvX" secondAttribute="trailing" constant="25" id="6XJ-YT-hjq"/>
                                                     <constraint firstAttribute="trailing" secondItem="8aP-rJ-2KR" secondAttribute="trailing" constant="2" id="95x-g2-OOF"/>
                                                     <constraint firstAttribute="trailing" secondItem="JL3-68-n1a" secondAttribute="trailing" constant="20" id="G4q-eA-wqc"/>
@@ -453,7 +454,7 @@
                                     <constraint firstAttribute="trailing" secondItem="D91-P5-lgq" secondAttribute="trailing" id="1jj-wK-r5p"/>
                                     <constraint firstItem="D91-P5-lgq" firstAttribute="width" secondItem="tZS-NY-NMt" secondAttribute="width" id="4bY-aN-fDh"/>
                                     <constraint firstAttribute="bottom" secondItem="D91-P5-lgq" secondAttribute="bottom" constant="-19" id="7JF-Wy-2yz"/>
-                                    <constraint firstItem="D91-P5-lgq" firstAttribute="height" secondItem="tZS-NY-NMt" secondAttribute="height" priority="250" constant="19" id="fOV-pT-Fed"/>
+                                    <constraint firstItem="D91-P5-lgq" firstAttribute="height" relation="greaterThanOrEqual" secondItem="tZS-NY-NMt" secondAttribute="height" priority="250" constant="19" id="fOV-pT-Fed"/>
                                     <constraint firstItem="D91-P5-lgq" firstAttribute="top" secondItem="tZS-NY-NMt" secondAttribute="top" id="hpm-Ir-He9"/>
                                     <constraint firstItem="D91-P5-lgq" firstAttribute="leading" secondItem="tZS-NY-NMt" secondAttribute="leading" id="pRv-NE-XId"/>
                                 </constraints>
